# Tome

./: .env.example  .env.otel.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
alembic/: env.py
alembic/versions/: 1b7f3c2d4e90_add_scenarios_to_game_events.py  2c9e1f4a7b22_add_embedding_to_world_entries.py  3f1e8d5b9c44_add_llm_usage_hour.py  8e7187bad9d7_001_initial_schema.py
assets/: index-7Jcuf4R4.css  index-aD1agJpw.js
backend/: requirements.txt
backend/app/: audit.py  auth.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py  schemas.py  tracing.py
backend/app/routers/: admin.py  auth.py  game.py  settings.py  stories.py
backend/app/services/: agents.py  cost.py  (+10 more)
docs/: 01-项目方案总览.md  02-调研结论与架构评估.md  03-详细工作计划与里程碑.md  04-部署与运维指南.md  05-开发者文档.md  06-未来规划与优化方向.md  07-阿里云Windows10域名部署指南.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  i18n.ts  main.tsx
scripts/: deploy-and-run-905.ps1  deploy.ps1  deploy.sh  gen_pwa_icons.py  i18n_check.cjs  start-prod-905.ps1  start.ps1  start.sh
tests/: conftest.py  test_admin_bulk.py  test_agents.py  test_cost.py  test_cost_alerts.py  test_cost_alerts_webhook.py  test_cost_trend.py  test_embeddings.py  test_game_engine.py  test_llm_export.py  test_llm_metrics.py  test_otel_smoke.py  test_post_processor.py  test_resilience.py  test_schemas.py  test_tracing.py  test_world_bulk.py
(+28 files in other folders)
